--- a/group project.html
+++ b/group project.html
@@ -4,15 +4,33 @@
 <html>
 <head>
 	<title>Halfway House Dog Rescue!!!</title>
-</head>	
+	<link rel="stylesheet" type="text/css" href="group project.css">
+</head>
 <body>
-	<h1> HOME </h1>
-	<div =Navigational Bar</div>
-	
-	<img src="">
-	<p>Almost Home Dog Rescue of NJ (AHDR), is a 501 (c) 3 organization with volunteers having over 20 years experience in animal rescue. Because we have no shelter facility, we rely on volunteers to take our dogs into their homes and care for them until they are adopted. We get our dogs from different situations like pounds, shelters & owner surrenders. Our goal is to help mend these broken hearts and bodies and place them into their new loving forever homes</p>
 
+	<h1>Halfway House Dog Rescue!!!</h1>
+	<h2> HOME </h2>
+	<nav>
+		<ul>
+			<li><a href="group project.html">Home</a></li>
+			<li><a href="page 2.html">About Us</a></li>
+			<li><a href="page 3.html">Contact Us</a></li>
+		</ul>
+	</nav>
+
+
+	<div>
+		<img src="download.jpg" style="float: left; margin: 0px 15px 15px 0px">
+
+		<p>Almost Home Dog Rescue of NJ (AHDR), is a 501 (c) 3 organization with volunteers having over 20 years experience in animal rescue.<br>
+			 Because we have no shelter facility, we rely on volunteers to take our dogs into their homes and care for them until they are adopted.<br>
+			 We get our dogs from different situations like pounds, shelters & owner surrenders. Our goal is to help mend these broken hearts and<br>
+			 bodies and place them into their new loving forever homes</p>
+</div>
 
 
 </body>
+	<footer>
+		<p>Posted by: Week 1 Group</p>
+		<p>Contact Information: <a href="mailto:m2monmouth@hotmail.com">m2monmouth@hotmail.com</a>.</p>
 </html>
