--- a/page 3.html
+++ b/page 3.html
@@ -3,18 +3,32 @@
 <html>
 <head>
 	<title>Halfway House Dog Rescue!!!</title>
-</head>	
+	<link rel="stylesheet" type="text/css" href="page3.css">
+</head>
 <body>
 	<h1> Contact Us </h1>
-	<div =Navigational Bar</div>
-	
-	<img src="">
-	<p>You can help us! The more volunteers and foster homes we have, the more dogs we can save. If you would like to join forces with us to help us grow and accomplish our mission of having no more homeless dogs, then please contact us.
-The more volunteers and foster homes we have, the more dogs we can save. Think about it, if you only help one dog, that one dogs life has changed forever. Contact us today at adopt@ahdrnj.com
+	<nav>
+ 	<ul>
+ 		<li><a href="group project.html">Home</a></li>
+ 		<li><a href="page 2.html">About Us</a></li>
+ 		<li><a href="page 3.html">Contact Us</a></li>
+ 	</ul>
+  </nav>
+
+
+	<img src="download (2).jpg"style="float: left; margin: 0px 15px 15px 0px">>
+	<p>You can help us! The more volunteers and foster homes we have, the more dogs we can save.<br>
+		 If you would like to join forces with us to help us grow and accomplish our mission of having <br>
+		 no more homeless dogs,then please contact us.The more volunteers and foster homes we have, the more<br>
+		  dogs we can save. Think about it, if you only help one dog, that one dogs life has changed forever.<br>
+			Contact us today at halfwayhousedogrescue.com
 
 </p>
 
 
 
 </body>
+	<footer>
+		<p>Posted by: Week 1 Group</p>
+		<p>Contact Information: <a href="mailto:m2monmouth@hotmail.com">m2monmouth@hotmail.com</a>.</p>
 </html>
