--- a/page 2.html
+++ b/page 2.html
@@ -3,15 +3,29 @@
 <html>
 <head>
 	<title>Halfway House Dog Rescue!!!</title>
-</head>	
+	<link rel="stylesheet" type="text/css" href="page2.css">
+
+</head>
 <body>
 	<h1> About Us </h1>
-	<div =Navigational Bar</div>
-	
-	<img src="">
-	<p>Almost Home Dog Rescue of NJ (AHDR), is a 501 (c) 3 organization with volunteers having over 20 years experience in animal rescue. Because we have no shelter facility, we rely on volunteers to take our dogs into their homes and care for them until they are adopted. We get our dogs from different situations like pounds, shelters & owner surrenders. Our goal is to help mend these broken hearts and bodies and place them into their new loving forever homes.</p>
+	<nav>
+ 	 <ul>
+ 		 <li><a href="group project.html">Home</a></li>
+ 		 <li><a href="page 2.html">About Us</a></li>
+ 		 <li><a href="page 3.html">Contact Us</a></li>
+ 	 </ul>
+  </nav>
 
+
+	<img src="download (1).jpg"style="float: left; margin: 0px 15px 15px 0px">
+	<p> We are dedicated to finding the right homes for the pets. We have been in existence in the tri-state area<br>
+		  for 15 years, and need your continued support to remain. We are a group of volunteers who will stop at notthing<br>
+			to ensure that we are taking cared of our furry friends. In addition to saving lives, we also code As a matter of <br>
+			fact we encourage our clients to enroll in the WDI course at NYCDA.</P>
 
 
 </body>
+<footer>
+		<p>Posted by: Week 1 Group</p>
+		<p>Contact Information: <a href="mailto:m2monmouth@hotmail.com">m2monmouth@hotmail.com</a>.</p>
 </html>
