--- a/page 3.html
+++ b/page 3.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="page3.css">
 </head>
 <body>
+	<h1>Halfway House Dog Rescue!!!</h1>
 	<h1> Contact Us </h1>
 	<nav>
  	<ul>
